# Sanctifier

./: .sanctify.toml  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_INDEX.md  README.md  action.yml  custom-rules.example.yaml
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  rust.yml  soroban-examples.yml
contracts/: README.md
contracts/amm-pool/: .sanctifier_cache.json  Cargo.toml
contracts/amm-pool/src/: lib.rs
contracts/amm-pool/test_snapshots/: add_liquidity_initializes_pool_and_locks_minimum_supply.1.json  add_liquidity_mints_proportional_lp_tokens.1.json  add_liquidity_rejects_initial_deposit_below_locked_minimum.1.json  add_liquidity_rejects_zero_amounts.1.json  get_price_rejects_unknown_pair.1.json  get_price_uses_integer_arithmetic_only.1.json  remove_liquidity_cannot_burn_locked_supply.1.json  remove_liquidity_returns_proportional_reserves.1.json  swap_enforces_max_slippage.1.json  swap_rejects_zero_liquidity_pool.1.json  swap_token_a_for_token_b_updates_price_and_reserves.1.json  swap_token_b_for_token_a_works_in_reverse_direction.1.json
contracts/amm-pool/tests/: integration_tests.rs
contracts/bridge/: Cargo.toml
contracts/flashloan-token/: Cargo.toml
contracts/flashloan-token/src/: lib.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/kani-poc/src/: lib.rs
contracts/multisig/: Cargo.toml
contracts/multisig/src/: lib.rs  test.rs
contracts/my-contract/: Cargo.toml
contracts/my-contract/src/: fuzz.rs  lib.rs  test.rs
contracts/oracle/: Cargo.toml
contracts/proxy/: Cargo.toml
contracts/proxy/src/: lib.rs
contracts/reentrancy-guard/: Cargo.toml
contracts/reentrancy-guard/benches/: reentrancy_bench.rs
contracts/reentrancy-guard/src/: lib.rs
contracts/reentrancy-guard/tests/: reentrancy_test.rs
contracts/runtime-guard-wrapper/: Cargo.toml
contracts/runtime-guard-wrapper/src/: lib.rs
contracts/runtime-guard-wrapper/tests/: integration_tests.rs
contracts/shadowing-example/: Cargo.toml
contracts/shadowing-example/src/: lib.rs
contracts/timelock/: Cargo.toml
contracts/timelock/src/: lib.rs
contracts/unsafe-prng-example/: Cargo.toml  README.md
contracts/unsafe-prng-example/src/: lib.rs
contracts/vesting/: Cargo.toml
contracts/vesting/src/: lib.rs
docs/: ci-cd-setup.md  vulnerability-database-format.md
docs/rules/: unsafe-prng.md
frontend/: README.md  package-lock.json  package.json  playwright.config.ts
frontend/app/: layout.tsx  types.ts
frontend/app/components/: CallGraph.stories.tsx  CallGraph.tsx  DashboardHeader.tsx  FindingsList.tsx  WorkspaceSidebar.tsx
frontend/app/dashboard/: page.tsx
frontend/docs/: self-hosting.md
schemas/: analysis-output.json
scripts/: resolve_action_version.py
specs/: sep41_token_total_supply.tla
tests/action/: test_resolve_action_version.py
tests/fixtures/: auth_gap_contract.rs  clean_token.rs  overflow_contract.rs  reentrancy_contract.rs
tests/vulnerability_db/: test_db_version_bump.py
tooling/sanctifier-cli/: Cargo.toml
tooling/sanctifier-core/: Cargo.toml
tooling/sanctifier-core/src/: custom_yaml_rules.rs  finding_codes.rs  lib.rs  patcher.rs  sdk_version.rs  sep41.rs  smt.rs  soroban_v21.rs
tooling/sanctifier-core/src/rules/: arithmetic_overflow.rs  auth_gap.rs  missing_state_event.rs  mod.rs  reentrancy.rs  truncation_bounds.rs  unchecked_external_call.rs  unsafe_prng.rs  variable_shadowing.rs
tooling/sanctifier-core/tests/: shared_fixtures.rs
(+102 files in other folders)
