[package]
name = "reentrancy-guard"
version = "0.1.0"
edition = "2021"
description = "Standardized, formally verified reentrancy guard for Soroban contracts"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = "20.5.0"

[dev-dependencies]
criterion = "0.5.1"
soroban-sdk = { version = "20.5.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[[bench]]
name = "reentrancy_bench"
harness = false

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
