[package]
name = "reentrancy-guard"
version = "0.1.0"
edition = "2021"
description = "Standardized, formally verified reentrancy guard for Soroban contracts"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[[bench]]
name = "reentrancy_bench"
harness = false

